<?xml version="1.0"?>
<package format="2">
  <name>filter_tools</name>
  <version>0.0.0</version>
  <description>Description</description>
  <maintainer email="mfallon@robots.ox.ac.uk">Maurice Fallon</maintainer>
  <author email="mfallon@robots.ox.ac.uk">Maurice Fallon</author>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="repository">https://github.com/openhumanoids/main-distro</url>
  <url type="bugtracker">https://github.com/openhumanoids/main-distro/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>
